--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "next-ts",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.24",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
-  }
+   "name": "next-ts",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "ts-node src/index.ts",
+      "lint": "next lint",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "next": "12.1.5",
+      "react": "18.0.0",
+      "react-dom": "18.0.0",
+      "reflect-metadata": "^0.1.13",
+      "sqlite": "^4.0.25",
+      "sqlite3": "^5.0.3",
+      "typeorm": "0.3.6",
+      "pg": "^8.4.0"
+   },
+   "devDependencies": {
+      "@types/node": "^16.11.10",
+      "@types/react": "18.0.5",
+      "@types/react-dom": "18.0.1",
+      "eslint": "8.13.0",
+      "eslint-config-next": "12.1.5",
+      "typescript": "4.5.2",
+      "ts-node": "10.7.0"
+   }
 }
